<resources>
    <string name="app_name">GamesProject</string>
    <string name="request_failed">request failed</string>
    <string name="error_login_failed">login failed</string>
    <string name="error_register_failed">failed to register</string>
    <string name="error_failed_to_join_game">failed to join game</string>
    <string name="error_failed_to_get_list_of_game">failed to get list of games</string>
    <string name="error_failed_to_create_game">failed to create a game</string>
    <string name="login_header">login</string>
    <string name="login_user_name_hint">user name</string>
    <string name="login_password_hint">password</string>
    <string name="login_do_not_have_user">no user?</string>
    <string name="login_btn">login</string>
    <string name="error_username_is_invalid">username should start with a letter, contain only letters and numbers and be 3 to 19 chars long</string>
    <string name="error_password_is_invalid">Password should be 4 chars long and can contain only letters and number</string>
    <string name="games_header">games</string>
    <string name="plus_button_to_create_a_new_game">A plus button to create a new game</string>
    <string name="games_user">user</string>
    <string name="register_header">register</string>
    <string name="register_user_name_hint">user name</string>
    <string name="register_password_hint">password</string>
    <string name="register_already_have_user_link">Already have a user?</string>
    <string name="register_btn">register</string>
    <string name="internal_error">Internal Error</string>
    <string name="failed_to_get_user_score">Failed to get a user score</string>
    <string name="failed_to_get_game_updates">Failed to get game updates</string>
    <string name="failed_to_make_a_move">Failed to make a move</string>
    <string name="win_message">Win</string>
    <string name="lose_message">Lose</string>
    <string name="game_over_message">Game over! The other player left…</string>
    <string name="draw_message">Draw</string>
    <string name="unexpected_status_message">Unexpected game status: %1$s</string>
    <string name="quit_dialog_title">Quit Game</string>
    <string name="quit_dialog_message">Are you sure you want to quit the game?</string>
    <string name="quit_dialog_positive_button">Yes</string>
    <string name="quit_dialog_negative_button">No</string>
    <string name="end_game_dialog_title">Game Ended</string>
    <string name="end_game_dialog_go_to_menu_button">Go to Games Menu</string>
    <string name="start_game_waiting_for_second_user">Waiting for second user</string>
    <string name="user_score">wins: %d | losses: %d</string>
    <string name="user_wins">Wins: %d</string>
    <string name="user_losses">Losses: %d</string>

</resources>