<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.gameList.GameListActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutBtn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/games_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:paddingTop="4dp"
        android:text="@string/games_user"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginHeader"
        app:layout_constraintEnd_toStartOf="@+id/logOutBtn"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/games_header"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/logOutBtn" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gamesRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_game" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createGameFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/plus_button_to_create_a_new_game" />

</androidx.constraintlayout.widget.ConstraintLayout>